Have started the modification for JDK 5.0 support [i.e. change for generics, enum, annotation, and etcetera]. Must double check to ensure quality + efficiency!!!